--- a/First_App/src/main/webapp/style/les5.css
+++ b/First_App/src/main/webapp/style/les5.css
@@ -23,4 +23,16 @@ label {
 
 table {
 	color: white;
+ 	margin-left: 20px;
+	
+}
+
+tr:hover {
+	background-color: white;
+	color: black;
+}
+
+#stad:hover {
+	background-color: white;
+	color: black;
 }
