--- a/First_App/src/main/webapp/style/les5.css
+++ b/First_App/src/main/webapp/style/les5.css
@@ -7,6 +7,7 @@ h1 {
 	color: white;
 	border: 2px solid white;
 	margin: 20px;
+	text-align: center;
 }
 
 p {
@@ -23,7 +24,10 @@ label {
 
 table {
 	color: white;
- 	margin-left: 20px;
+	width: 70%;
+ 	margin-left: 15%;
+ 	margin-right:15%;
+
 	
 }
 
@@ -35,4 +39,21 @@ tr:hover {
 #stad:hover {
 	background-color: white;
 	color: black;
+}
+
+@media only screen and (max-width: 400px) {
+	h1 {
+	font-size:25px;
+	}
+}
+
+@media only screen and (min-width: 700px) {
+	#frame {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	}
+	
+	#myLocation {grid-column: 1}
+	#weatherInfo{grid-column: 2}
+	#countryList{grid-column: 1/3}
 }
