--- a/First_App/src/main/webapp/style/les5.css
+++ b/First_App/src/main/webapp/style/les5.css
@@ -28,10 +28,17 @@ table {
  	margin-left: 15%;
  	margin-right:15%;
 
-	
 }
 
-tr:hover {
+#wijzigform {
+	margin-bottom: 50px;
+}
+
+label {
+	margin-right: 20px;
+	margin-left: 10px;
+}
+#table tr:hover {
 	background-color: white;
 	color: black;
 }
